added data reveal function for smooth scrolling

--- a/frontend/tours.html
+++ b/frontend/tours.html
@@ -28,7 +28,7 @@
 <main>
 
   <!-- HERO / INTRO -->
-  <section class="hero-intro">
+  <section class="hero-intro" data-reveal>
     <div class="container">
       <h2>Choose Your Next Adventure</h2>
       <p>Discover the rich history and beauty of Karnataka with our curated travel packages.</p>
@@ -36,7 +36,7 @@
   </section>
 
   <!-- TOUR PACKAGES -->
-  <section class="section">
+  <section class="section" data-reveal>
     <div class="container">
       <h2><i class="fas fa-route"></i> Our Predefined Tour Packages</h2>
 
@@ -107,7 +107,7 @@
   </section>
 
   <!-- CUSTOM TOUR CTA -->
-  <section class="section">
+  <section class="section" data-reveal>
     <div class="container">
       <div class="custom-cta-box">
 
