--- a/frontend/car-rentals.html
+++ b/frontend/car-rentals.html
@@ -28,7 +28,7 @@
 <main>
 
   <!-- HERO / INTRO -->
-  <section class="hero-intro">
+  <section class="hero-intro" data-reveal>
     <div class="container">
       <h2>Your Journey Starts Here</h2>
       <p>Reliable and comfortable car rentals for local and outstation travel. Choose from our diverse fleet.</p>
@@ -36,7 +36,7 @@
   </section>
 
   <!-- VEHICLE FLEET -->
-  <section class="section">
+  <section class="section" data-reveal>
     <div class="container">
       <h2><i class="fas fa-car"></i> Our Fleet of Vehicles</h2>
 
@@ -86,7 +86,7 @@
   </section>
 
   <!-- PRICING TABLE -->
-  <section class="section">
+  <section class="section" data-reveal>
     <div class="container">
       <h2><i class="fas fa-tags"></i> Transparent Pricing</h2>
 
@@ -136,7 +136,7 @@
   </section>
 
   <!-- DRIVERS -->
-  <section class="section">
+  <section class="section" data-reveal>
     <div class="container">
       <h2><i class="fas fa-user-shield"></i> Meet Our Experienced Drivers</h2>
 
@@ -172,7 +172,7 @@
   </section>
 
   <!-- CTA -->
-  <section class="section">
+  <section class="section" data-reveal>
     <div class="container">
       <h3>Ready to start your journey?</h3>
       <p>Calculate your trip cost and secure your car rental in minutes!</p>
