--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,7 +45,7 @@
   </section>
 
   <section class="section services-section">
-    <div class="container">
+    <div class="container" data-reveal>
       <h2><i class="fas fa-concierge-bell"></i> Our Comprehensive Services</h2>
       <div class="card-grid service-grid">
         
@@ -76,7 +76,7 @@
     </div>
   </section>
 
-  <section class="section popular-tours-section">
+  <section class="section popular-tours-section" data-reveal>
     <div class="container">
       <h2><i class="fas fa-map-marker-alt"></i> Popular Tours from Kalaburagi</h2>
 
@@ -111,7 +111,7 @@
     </div>
   </section>
 
-  <section class="section testimonial-section">
+  <section class="section testimonial-section" data-reveal>
     <div class="container">
       <h2><i class="fas fa-quote-left"></i> What Our Customers Say</h2>
 
@@ -148,7 +148,7 @@
     </div>
   </section>
   
-  <section class="section gallery-section">
+  <section class="section gallery-section" data-reveal>
     <div class="container">
       <h2>Travel Gallery</h2>
       <div class="card-grid photo-grid">
