--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,10 +10,16 @@
 <body>
 
 <header class="main-header">
+
+
   <div class="logo">
     <a href="index.html">Sampada Tours & Travels</a>
   </div>
+  <button class="nav-toggle" id="navToggle">
+  ☰
+  </button>
   <nav class="main-nav">
+
     <a href="index.html" class="active">Home</a>
     <a href="tours.html">Tours</a>
     <a href="car-rentals.html">Car Rentals</a>
@@ -175,6 +181,17 @@
     AUTH.updateAuthUI();
   });
 </script>
+
+<script>
+const toggle = document.getElementById("navToggle");
+const nav = document.querySelector(".main-nav");
+
+toggle.addEventListener("click", () => {
+  nav.classList.toggle("open");
+});
+</script>
+
+
 
 </body>
 </html>
