--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,7 @@
   <div class="logo">
     <a href="index.html">Sampada Tours & Travels</a>
   </div>
+  <nav class="main-nav">
     <a href="index.html" class="active">Home</a>
     <a href="tours.html">Tours</a>
     <a href="car-rentals.html">Car Rentals</a>
