--- a/frontend/tours.html
+++ b/frontend/tours.html
@@ -28,7 +28,7 @@
 <main>
 
   <!-- HERO / INTRO -->
-  <section class="hero-intro" data-reveal>
+  <section class="hero-intro1" data-reveal>
     <div class="container">
       <h2>Choose Your Next Adventure</h2>
       <p>Discover the rich history and beauty of Karnataka with our curated travel packages.</p>
@@ -114,11 +114,11 @@
         <div class="text-content">
           <h2><i class="fas fa-cogs"></i> Design Your Own Trip</h2>
           <p>Can't find the perfect itinerary? We specialize in creating personalized tours tailored to your group size, budget, and desired destinations across India.</p>
-          <ul>
-            <li><i class="fas fa-check-circle"></i> Flexible Destinations</li>
-            <li><i class="fas fa-check-circle"></i> Choose Duration and Pace</li>
-            <li><i class="fas fa-check-circle"></i> Pick Specific Vehicle/Hotel Type</li>
-          </ul>
+          
+            <i class="fas fa-check-circle"></i> Flexible Destinations <br>
+            <i class="fas fa-check-circle"></i> Choose Duration and Pace <br>
+            <i class="fas fa-check-circle"></i> Pick Specific Vehicle/Hotel Type
+          
         </div>
 
         <div class="action-content" style="margin-top: 5%;">
