--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,7 +38,7 @@
           <a href="tours.html" class="btn-primary large-cta">
             <i class="fas fa-route"></i> View Tour Packages
           </a>
-          <a href="booking.html?package=Custom" class="btn-secondary large-cta secondary-cta">
+          <a href="booking.html?package=Custom" class="btn-secondary large-cta secondary-cta btn-what" >
             <i class="fas fa-pen-fancy"></i> Plan Your Custom Trip
           </a>
         </div>
@@ -113,6 +113,20 @@
     </div>
   </section>
 
+
+  
+  <section class="section gallery-section" data-reveal>
+    <div class="container">
+      <h2>Travel Gallery</h2>
+      <div class="card-grid photo-grid">
+        <a href="#" class="gallery-item"><img src="images/gallery1.jpg" alt="Gallery Image 1" class="gallery-photo"></a>
+        <a href="#" class="gallery-item"><img src="images/gallery2.jpg" alt="Gallery Image 2" class="gallery-photo"></a>
+        <a href="#" class="gallery-item"><img src="images/gallery3.jpg" alt="Gallery Image 3" class="gallery-photo"></a>
+      </div>
+    </div>
+  </section>
+</main>
+
   <section class="section testimonial-section" data-reveal>
     <div class="container">
       <h2><i class="fas fa-quote-left"></i> What Our Customers Say</h2>
@@ -149,18 +163,7 @@
       </div>
     </div>
   </section>
-  
-  <section class="section gallery-section" data-reveal>
-    <div class="container">
-      <h2>Travel Gallery</h2>
-      <div class="card-grid photo-grid">
-        <a href="#" class="gallery-item"><img src="images/gallery1.jpg" alt="Gallery Image 1" class="gallery-photo"></a>
-        <a href="#" class="gallery-item"><img src="images/gallery2.jpg" alt="Gallery Image 2" class="gallery-photo"></a>
-        <a href="#" class="gallery-item"><img src="images/gallery3.jpg" alt="Gallery Image 3" class="gallery-photo"></a>
-      </div>
-    </div>
-  </section>
-</main>
+
 
 <footer class="main-footer">
   <div class="footer-content">
