--- a/frontend/tours.html
+++ b/frontend/tours.html
@@ -88,7 +88,7 @@
           <span class="duration-badge">2-Day Package</span>
           <div class="card-content">
             <h3>Vijayapura Tour</h3>
-            <p>Discover architectural marvels like Gol Gumbaz and Ibrahim Rouza in this historical city.</p>
+            <p>Discover architectural marvels like Gol Gumbaz and Ibrahim Rouza.</p>
             <div class="tour-meta">
               <span><i class="far fa-clock"></i> 2 Days / 1 Night</span>
               <span><i class="fas fa-building"></i> Famous Monuments</span>
