--- a/frontend/booking.html
+++ b/frontend/booking.html
@@ -16,7 +16,7 @@
     <a href="tours.html" class="active">Tours</a>
     <a href="car-rentals.html">Car Rentals</a>
     <a href="booking-dashboard.html" >My Bookings</a>
-    <a href="contact.html">Contact</a>
+    <a href="feedback.html">Feedback</a>
   </nav>
   <div class="auth-links" id="authLinks">
     <!-- Auth UI injected by auth.js -->
