--- a/frontend/feedback.html
+++ b/frontend/feedback.html
@@ -16,7 +16,7 @@
     <a href="tours.html">Tours</a>
     <a href="car-rentals.html">Car Rentals</a>
     <a href="booking-dashboard.html" >My Bookings</a>
-    <a href="contact.html" class="active">Contact</a>
+    <a href="feedback.html" class="active">Feedback</a>
   </nav>
   <div class="auth-links" id="authLinks">
     <!-- Auth UI injected by auth.js -->
