--- a/frontend/register.html
+++ b/frontend/register.html
@@ -19,7 +19,7 @@
     <a href="tours.html">Tours</a>
     <a href="car-rentals.html">Car Rentals</a>
     <a href="booking-dashboard.html" >My Bookings</a>
-    <a href="contact.html">Contact</a>
+    <a href="feedback.html">Feedback</a>
   </nav>
   <div class="auth-links" id="authLinks"></div>
 </header>
