added user image

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -134,7 +134,7 @@
       <div class="card-grid testimonial-grid">
         
         <div class="testimonial-card">
-          <img src="images/user1.jpg" alt="Customer Photo" class="user-avatar">
+          <img src="images/user.jpg" alt="Customer Photo" class="user-avatar">
           <div class="testimonial-body">
             <p class="quote">"Very good service. Driver was polite and on time. Made our family trip completely stress-free."</p>
             <h4>Ramesh Kumar</h4>
@@ -143,7 +143,7 @@
         </div>
 
         <div class="testimonial-card">
-          <img src="images/user2.jpg" alt="Customer Photo" class="user-avatar">
+          <img src="images/user.jpg" alt="Customer Photo" class="user-avatar">
           <div class="testimonial-body">
             <p class="quote">"Clean cars and affordable pricing for the Bidar package. Highly recommended for short weekend trips."</p>
             <h4>Sneha Patil</h4>
@@ -152,7 +152,7 @@
         </div>
 
         <div class="testimonial-card">
-          <img src="images/user3.jpg" alt="Customer Photo" class="user-avatar">
+          <img src="images/user.jpg" alt="Customer Photo" class="user-avatar">
           <div class="testimonial-body">
             <p class="quote">"Best tours from Kalaburagi. Smooth experience and the guide was very knowledgeable about history."</p>
             <h4>Akash Deshmukh</h4>
