--- a/frontend/car-rentals.html
+++ b/frontend/car-rentals.html
@@ -184,11 +184,31 @@
 
 </main>
 
-<footer class="main-footer">
+<footer class="main-footer" role="contentinfo">
   <div class="footer-content">
     <p>Sampada Tours & Travels</p>
-    <p class="address"><i class="fas fa-map-marker-alt"></i> Kirana Bazar Road, Mominpura, Kalaburagi, Karnataka</p>
-    <p class="copyright">© 2025 Sampada Tours & Travels</p>
+
+    <p class="address">
+      <a 
+        href="https://www.google.com/maps/search/?api=1&query=Kirana+Bazar+Road,+Mominpura,+Kalaburagi,+Karnataka"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="map-link"
+      >
+        <i class="fas fa-map-marker-alt"></i>
+        Kirana Bazar Road, Mominpura, Kalaburagi, Karnataka
+      </a>
+    </p>
+
+
+    <p>
+      <i class="fas fa-phone"></i> +91 8310634274 |
+      <i class="fas fa-envelope"></i> sampadatours777@gmail.com
+    </p>
+
+    <p class="copyright">
+      © <span id="year"></span> Sampada Tours & Travels
+    </p>
   </div>
 </footer>
 
