--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -135,12 +135,21 @@
 
 <footer class="main-footer" role="contentinfo">
   <div class="footer-content">
-    <p>Sampada Tours & Travels</p>
 
+    <!-- 1) Brand -->
+    <p class="footer-brand">Sampada Tours & Travels</p>
+
+    <!-- 2) Contact (primary action) -->
+    <p class="footer-contact">
+      <i class="fas fa-phone"></i> +91 9XXXXXXXXX &nbsp; | &nbsp;
+      <i class="fas fa-envelope"></i> support@sampadatours.com
+    </p>
+
+    <!-- 3) Location (map link) -->
     <p class="address">
       <a 
         href="https://www.google.com/maps/search/?api=1&query=Kirana+Bazar+Road,+Mominpura,+Kalaburagi,+Karnataka"
-        target="_blank"
+        target="_blank" 
         rel="noopener noreferrer"
         class="map-link"
       >
@@ -149,15 +158,18 @@
       </a>
     </p>
 
-
-    <p>
-      <i class="fas fa-phone"></i> +91 8310634274 |
-      <i class="fas fa-envelope"></i> sampadatours777@gmail.com
-    </p>
-
+    <!-- 4) Legal -->
     <p class="copyright">
-      © <span id="year"></span> Sampada Tours & Travels
+      © <span id="year"></span> Sampada Tours & Travels · All rights reserved
     </p>
+
+    <!-- 5) Developer Credit -->
+    <p class="dev-credit">
+      Developed by <strong>Navaneeth Gowda G</strong>
+      &
+      <strong>Abhishek Kumar Kolli</strong>
+    </p>
+
   </div>
 </footer>
 
