--- a/frontend/index.html
+++ b/frontend/index.html
@@ -173,8 +173,8 @@
 
     <!-- 2) Contact (primary action) -->
     <p class="footer-contact">
-      <i class="fas fa-phone"></i> +91 9XXXXXXXXX &nbsp; | &nbsp;
-      <i class="fas fa-envelope"></i> support@sampadatours.com
+      <i class="fas fa-phone"></i> +91 83106 34274 &nbsp; | &nbsp;
+      <i class="fas fa-envelope"></i> sampadatravels777@gmail.com
     </p>
 
     <!-- 3) Location (map link) -->
