--- a/frontend/book-car.html
+++ b/frontend/book-car.html
@@ -162,7 +162,7 @@
     <!-- 3) Location (map link) -->
     <p class="address">
       <a 
-        href="https://www.google.com/maps/search/?api=1&query=Kirana+Bazar+Road,+Mominpura,+Kalaburagi,+Karnataka"
+        href="https://www.google.com/maps/place/Ashok+Chowk,+Gunj+Rd,+near+Ashok+Chowk,+Mominpura,+Kalaburagi,+Karnataka+585101/@17.3464983,76.8383556,17z/data=!3m1!4b1!4m6!3m5!1s0x3bc8c742c450220d:0x93fb206cca6f7915!8m2!3d17.3464983!4d76.8383556!16s%2Fg%2F11gh9q8016!17m2!4m1!1e3!18m1!1e1?entry=ttu&g_ep=EgoyMDI2MDIwMy4wIKXMDSoASAFQAw%3D%3D"
         target="_blank" 
         rel="noopener noreferrer"
         class="map-link"
