--- a/frontend/booking.html
+++ b/frontend/booking.html
@@ -56,7 +56,7 @@
         <p style="margin: 0 0 10px 0; color: #333;">
           <i class="fas fa-map-pin" style="color: #ff6b6b; margin-right: 8px;"></i>
           <strong>Pickup Point:</strong> Kalaburagi
-          <a href="#" id="pickupMapLink" target="_blank" style="margin-left: 10px; color: #007bff; text-decoration: none;">
+          <a href="" id="pickupMapLink" target="_blank" style="margin-left: 10px; color: #007bff; text-decoration: none;">
             <i class="fas fa-map-marked-alt"></i> View on Map
           </a>
         </p>
@@ -141,7 +141,7 @@
     <!-- 3) Location (map link) -->
     <p class="address">
       <a 
-        href="https://www.google.com/maps/search/?api=1&query=Kirana+Bazar+Road,+Mominpura,+Kalaburagi,+Karnataka"
+        href="https://www.google.com/maps/place/Ashok+Chowk,+Gunj+Rd,+near+Ashok+Chowk,+Mominpura,+Kalaburagi,+Karnataka+585101/@17.3464983,76.8383556,17z/data=!3m1!4b1!4m6!3m5!1s0x3bc8c742c450220d:0x93fb206cca6f7915!8m2!3d17.3464983!4d76.8383556!16s%2Fg%2F11gh9q8016!17m2!4m1!1e3!18m1!1e1?entry=ttu&g_ep=EgoyMDI2MDIwMy4wIKXMDSoASAFQAw%3D%3D"
         target="_blank" 
         rel="noopener noreferrer"
         class="map-link"
@@ -199,9 +199,9 @@ document.addEventListener("DOMContentLoaded", () => {
 
     // PICKUP LOCATION DATA
     const pickupMapLinks = {
-        'Hampi': 'https://maps.google.com/?q=Kalaburagi',  // Replace with actual Google Maps link later
-        'Bidar': 'https://maps.google.com/?q=Kalaburagi',  // Replace with actual Google Maps link later
-        'Vijayapura': 'https://maps.google.com/?q=Kalaburagi'  // Replace with actual Google Maps link later
+        'Hampi': 'https://www.google.com/maps/place/Ashok+Chowk,+Gunj+Rd,+near+Ashok+Chowk,+Mominpura,+Kalaburagi,+Karnataka+585101/@17.3464983,76.8383556,17z/data=!3m1!4b1!4m6!3m5!1s0x3bc8c742c450220d:0x93fb206cca6f7915!8m2!3d17.3464983!4d76.8383556!16s%2Fg%2F11gh9q8016!17m2!4m1!1e3!18m1!1e1?entry=ttu&g_ep=EgoyMDI2MDIwMy4wIKXMDSoASAFQAw%3D%3D', 
+        'Bidar': 'https://www.google.com/maps/place/Ashok+Chowk,+Gunj+Rd,+near+Ashok+Chowk,+Mominpura,+Kalaburagi,+Karnataka+585101/@17.3464983,76.8383556,17z/data=!3m1!4b1!4m6!3m5!1s0x3bc8c742c450220d:0x93fb206cca6f7915!8m2!3d17.3464983!4d76.8383556!16s%2Fg%2F11gh9q8016!17m2!4m1!1e3!18m1!1e1?entry=ttu&g_ep=EgoyMDI2MDIwMy4wIKXMDSoASAFQAw%3D%3D',  
+        'Vijayapura': 'https://www.google.com/maps/place/Ashok+Chowk,+Gunj+Rd,+near+Ashok+Chowk,+Mominpura,+Kalaburagi,+Karnataka+585101/@17.3464983,76.8383556,17z/data=!3m1!4b1!4m6!3m5!1s0x3bc8c742c450220d:0x93fb206cca6f7915!8m2!3d17.3464983!4d76.8383556!16s%2Fg%2F11gh9q8016!17m2!4m1!1e3!18m1!1e1?entry=ttu&g_ep=EgoyMDI2MDIwMy4wIKXMDSoASAFQAw%3D%3D' 
     };
 
     // 1. 🔐 AUTHENTICATION CHECK
